# gmeltanoexp

./: pyproject.toml
checkfordbtandairflow/: index.ipynb  meltano.yml
checkfordbtandairflow/extract/: values.csv
checkfordbtandairflow/transform/models/tap_csv/: datainfo.sql  source.yml
checkfordbtandairflow/transform/models/tap_shopify/: resultdata.sql  source.yml
